Main height fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,7 @@ html {
     margin-bottom: 0;
   }
   .main {
-    height: 3700px;
+    height: 3950px;
   }
   .subtext2 {
     width: 80vw;
